# gaf

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  gaf.cmake  gaf.py  gaf_cpp.py  gaf_parse.py  gaf_types.py  test-all.py  test.py  travis_old.txt
.github/workflows/: linux.yml
cpp_samples/: comments2.cc  enum.cc  master.cc  twostructs.cc
examples/: arrays.c  comments.c  comments1.c  comments2.c  comments3.c  constants.c  custom-parsing.c  defaultvalues.c  enum.c  master.c  onestruct.c  optional.c  properties.c  standard_types.c  twostructs.c  underscore.c
examples/cpp/: comments1.cc  comments3.cc  comments_base.cc  constants.cc  defaultvalues.cc  defaultvalues_base.cc  enum.cc  master.cc  package.cc  pugixmlsource.h  readjsonsource.h  twostructs.cc  underscore.cc
examples/gaf/: comments2.c  comments3.c  constants.c  defaultvalues.c  enum.c  master.c  package.c  twostructs.c  underscore.c
examples/gaf/planned/: bitfield.c  defaultvalues2.c  implicittypealias.c  properties.c  typealias.c
examples/planned/: README.md  arrays.c  custom-name.c  defaultvalues2.c  enum.c  string.c
src/: CMakeLists.txt
src/gaf/: args.cc  args.h  array.h  cpp.cc  cpp.h  gen_cpp.cc  gen_cpp.h  gen_imgui.cc  gen_imgui.h  gen_pugixml.cc  gen_pugixml.h  gen_rapidjson.cc  gen_rapidjson.h  generator.cc  generator.h  lib_gaf.cc  lib_gaf.h  lib_pugixml.cc  lib_pugixml.h  lib_rapidjson.cc  lib_rapidjson.h  main.cc  parse.cc  parse.h  types.cc  types.h
test-cpp/: arrays.cc  comments.cc  config_in.h  defaultvalues.cc  enum.cc  master.cc  onestruct.cc  optional.cc  package.cc  readjsonsource.h  standard_types.cc  twostructs.cc  underscore.cc  underscore_onestruct.cc
tools/cmake/: generate-header-test.cmake
